--- a/google_colab.ipynb
+++ b/google_colab.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOCPWcxLVH+yUDa+5YeEK4I",
+      "authorship_tag": "ABX9TyNY8KPqoZtDj/DqH7aBxSD4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# **Opps** concept in python"
+        "# **Opps concept in python**"
       ],
       "metadata": {
         "id": "7kseLqRgLJIk"
@@ -260,7 +260,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Tuple list sets Dictionary"
+        "# ****Tuple list sets Dictionary****"
       ],
       "metadata": {
         "id": "P1AakoRBRLCM"
@@ -462,7 +462,9 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "# ****lambda function****"
+      ],
       "metadata": {
         "id": "h7W9BpFpS4nJ"
       }
@@ -472,7 +474,7 @@
       "source": [
         "\n",
         "\n",
-        "# A lambda function :-in Python is a small, anonymous function defined using the lambda keyword. It is often used for short, simple operations where a full function definition with def is not necessary. Lambda functions can have any number of arguments, but only one expression. The result of the expression is automatically returned."
+        "#  ****lambda function :-****in Python is a small, anonymous function defined using the lambda keyword. It is often used for short, simple operations where a full function definition with def is not necessary. Lambda functions can have any number of arguments, but only one expression. The result of the expression is automatically returned."
       ],
       "metadata": {
         "id": "YMB_5OhISeYI"
@@ -597,7 +599,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# ******Flask coding question**********"
+        "# **** **Flask coding question******"
       ],
       "metadata": {
         "id": "SrX-wcJmhnCV"
@@ -633,7 +635,7 @@
         "id": "v0aVjchLig-a",
         "outputId": "e9df3a07-9aba-487f-dfec-3b578f0a4a86"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -674,7 +676,7 @@
       "metadata": {
         "id": "ijIBnNf6hsYU"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -708,7 +710,7 @@
         "id": "bt9r4q8jjEbI",
         "outputId": "d3eef134-5984-4a84-ba01-1b53cccc4980"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -768,7 +770,7 @@
         "id": "rQp9mDlXjEMQ",
         "outputId": "8423b145-2403-450e-a8d5-bbd9c7f492f2"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -820,7 +822,7 @@
         "id": "4LeB40ZEjD5o",
         "outputId": "b9af05ba-58be-48c7-b3be-0cc2f4321d7a"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -877,7 +879,7 @@
         "id": "ybzfoLGJjDo4",
         "outputId": "c17f0c18-9dcd-44a4-f259-7e30621f8ec5"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -918,7 +920,7 @@
       "metadata": {
         "id": "6fJotIhFjC6o"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -958,7 +960,7 @@
         "id": "_YLIE7gNkGWT",
         "outputId": "7991faa2-a635-49c1-84ad-ad2bd329b8a1"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1000,7 +1002,7 @@
       "metadata": {
         "id": "v_tJiLIvkEIl"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1046,7 +1048,7 @@
         "id": "pZ8PdTCQkD8U",
         "outputId": "ed5e30f0-97ae-46fc-d89e-af850c423ef1"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1078,7 +1080,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Django coding questions in Python"
+        "# ****Django coding questions in Python****"
       ],
       "metadata": {
         "id": "hl3Yy3Ock7HA"
@@ -1096,7 +1098,7 @@
         "id": "OTUxgEowlhuI",
         "outputId": "413edd47-65cf-4e0a-c211-a874301b2e9c"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1147,7 +1149,7 @@
       "metadata": {
         "id": "Cm4ki40QmZF1"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1171,7 +1173,7 @@
       "metadata": {
         "id": "oNDXr6ZXkDu0"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1191,12 +1193,12 @@
         "\n",
         "urlpatterns = [\n",
         "    path('hello/', hello_world, name='hello_world'),\n",
-        "\n"
+        "]"
       ],
       "metadata": {
         "id": "6q8PRgMAkDh8"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1220,7 +1222,7 @@
       "metadata": {
         "id": "D2sy0saNkDUb"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1243,7 +1245,7 @@
       "metadata": {
         "id": "TlwHsAvbkC7l"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1266,7 +1268,7 @@
       "metadata": {
         "id": "hOdYZ9v9nmxo"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1290,7 +1292,7 @@
       "metadata": {
         "id": "uxuPjGrFnxvO"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1310,13 +1312,16 @@
       "metadata": {
         "id": "gmkYpdKPnxix"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "# PySpark coding questions"
+        "#**** PySpark coding questions****\n",
+        "\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
         "id": "bcQ1af8Vnxbo"
@@ -1334,7 +1339,7 @@
         "id": "kMhQVTejnxUZ",
         "outputId": "5fd6e9a2-da74-40c1-f344-95529da77932"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1370,7 +1375,7 @@
       "metadata": {
         "id": "T_hDWga_nxCj"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1404,7 +1409,7 @@
       "metadata": {
         "id": "ywGnlnY6pwfo"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1434,7 +1439,7 @@
       "metadata": {
         "id": "0DHVDBSwpwUA"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1449,42 +1454,107 @@
     {
       "cell_type": "code",
       "source": [
-        "\n"
+        "# Read a CSV file into a DataFrame\n",
+        "df = spark.read.csv(\"path/to/file.csv\", header=True, inferSchema=True)\n",
+        "\n",
+        "# Show the first few rows of the DataFrame\n",
+        "df.show()\n"
       ],
       "metadata": {
-        "id": "E7SX0-cQpwIa"
+        "id": "2U-slwoarquR"
       },
       "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "# How do you remove duplicate rows from a PySpark DataFrame?"
+      ],
+      "metadata": {
+        "id": "MYnqql-brqdL"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Remove duplicate rows based on all columns\n",
+        "df_no_duplicates = df.dropDuplicates()\n",
+        "\n",
+        "# Show the DataFrame after removing duplicates\n",
+        "df_no_duplicates.show()\n"
+      ],
+      "metadata": {
+        "id": "jE7cONytrtw6"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "How do you rename a column in a PySpark DataFrame?"
+      ],
       "metadata": {
         "id": "qmfOJznJpwBx"
       }
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# Rename column 'old_name' to 'new_name'\n",
+        "df_renamed = df.withColumnRenamed(\"old_name\", \"new_name\")\n",
+        "\n",
+        "# Show the DataFrame after renaming the column\n",
+        "df_renamed.show()\n"
+      ],
       "metadata": {
-        "id": "PcxiLgV4pv1p"
+        "id": "iOJ5tJHtruNI"
       },
       "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "# How do you sort the rows of a PySpark DataFrame by a specific column?"
+      ],
       "metadata": {
         "id": "xfWRWamtpvX4"
       }
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# Sort the DataFrame by the 'Age' column in ascending order\n",
+        "sorted_df = df.orderBy(\"Age\")\n",
+        "\n",
+        "# Show the sorted DataFrame\n",
+        "sorted_df.show()\n"
+      ],
       "metadata": {
         "id": "eIVpjpKCpumZ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# How do you check for null or missing values in a PySpark DataFrame?"
+      ],
+      "metadata": {
+        "id": "KBG6ZizYs4cF"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Check for missing (null) values in the 'Age' column\n",
+        "df.filter(df.Age.isNull()).show()\n"
+      ],
+      "metadata": {
+        "id": "66KtpKpSs4V2"
       },
       "execution_count": null,
       "outputs": []
